--- a/about-us/index.html
+++ b/about-us/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="Meet our expert team of Registered Social Workers at York Durham Counselling. Kim Sundal, Marnie Teitlebaum, and Jillian Hooper provide compassionate online therapy.">
     <meta name="keywords" content="Kim Sundal, Marnie Teitlebaum, Jillian Hooper, York Durham Counselling Team, Therapists Thornhill">
 
-    <link rel="icon" href="../images/YD-icon.png">
-
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/YD-icon.png">
+    <link rel="apple-touch-icon" href="../images/YD-icon.png">
+    
     <title>About Us | York Durham Counselling</title>
     
     <link rel="stylesheet" href="about-us.css"/>
