--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="description" content="Professional online therapy & counselling in Thornhill, ON. York Durham Counselling offers expert mental health support with 20+ years of experience.">
     <meta name="keywords" content="Therapy Thornhill, Online Counselling Ontario, York Durham Counselling, Anxiety Therapy">
 
-    <link rel="icon" href="images/YD-icon.png">
-    
+    <link rel="icon" type="image/png" sizes="32x32" href="images/YD-icon.png">
+    <link rel="apple-touch-icon" href="images/YD-icon.png">
+
     <title>Therapy & Counselling | York Durham Counselling</title>
 
     <link rel="stylesheet" href="index.css"/>
