--- a/mental-health-resources/index.html
+++ b/mental-health-resources/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="Access free 24/7 mental health resources and crisis support in Canada. York Durham Counselling provides tools like Kids Help Phone, Smiling Mind, and the 9-8-8 Helpline.">
     <meta name="keywords" content="Mental Health Resources, Crisis Support Canada, 988 Helpline, Kids Help Phone, CBT Apps, York Durham Counselling">
 
-    <link rel="icon" href="../images/YD-icon.png">
-
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/YD-icon.png">
+    <link rel="apple-touch-icon" href="../images/YD-icon.png">
+    
     <title>Mental Health Resources | York Durham Counselling</title>
     <link rel="stylesheet" href="mental-health-resources.css"/>
     <link rel="stylesheet" href="../styles.css"/>
