--- a/our-mission/index.html
+++ b/our-mission/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about the mission of York Durham Counselling: providing expert, compassionate online therapy with over 20 years of clinical experience.">
 
-    <link rel="icon" href="../images/YD-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/YD-icon.png">
+    <link rel="apple-touch-icon" href="../images/YD-icon.png">
 
     <title>Our Mission | York Durham Counselling</title>
     
