--- a/session-prices/index.html
+++ b/session-prices/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="View session rates for York Durham Counselling. Transparent pricing for individual therapy, family counselling, and CBT programs in Thornhill, ON.">
     <meta name="keywords" content="Therapy prices Thornhill, counselling rates Ontario, affordable therapy, individual counselling cost">
 
-    <link rel="icon" href="../images/YD-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/YD-icon.png">
+    <link rel="apple-touch-icon" href="../images/YD-icon.png">
 
     <title>Session Prices | York Durham Counselling</title>
     <link rel="stylesheet" href="session-prices.css"/>
