--- a/therapy-services/index.html
+++ b/therapy-services/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="Explore our therapy services in Thornhill, ON. We specialize in Individual Therapy, Family Counselling, Child and Adolescent support, and CBT groups.">
     <meta name="keywords" content="Individual Therapy Thornhill, Family Counselling Ontario, CBT Groups, Child Therapy, Adolescent Counselling">
 
-    <link rel="icon" href="../images/YD-icon.png">
-
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/YD-icon.png">
+    <link rel="apple-touch-icon" href="../images/YD-icon.png">
+    
     <title>Therapy Services | York Durham Counselling</title>
     <link rel="stylesheet" href="therapy-services.css"/>
     <link rel="stylesheet" href="../styles.css"/>
